# todolistinrust

./: Cargo.toml  README.md  diesel.toml
migrations/2025-02-11-010013_todo/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs
