[package]
name = "actitutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
diesel = { version = "2.2.0", features = ["chrono", "postgres"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }